# MapReduce-library

./: README.md  pyproject.toml
compgraph/: algorithms.py  graph.py
compgraph/operations/: __init__.py  base.py  external_sort_op.py  join_op.py  map_op.py  reduce_op.py  utils.py
examples/: __init__.py  run_inverted_index_graph.py  run_pmi_graph.py  run_test_yandex_maps.py  run_word_count.py
tests/: test_examples.py  test_graph.py  test_operations.py
