[build-system]
requires = ["setuptools >= 61.0.0", "wheel", 'click']
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
version = "0.0.1"
description = "compgraph"
requires-python = ">=3.11"
authors = [
    {name = "Viktor", email = "umkaquark@gmail.com"},
]
[tool.setuptools]
py-modules = []
